fix layout issues ICD-802

--- a/src/Styles/components/_interested-shelf.scss
+++ b/src/Styles/components/_interested-shelf.scss
@@ -37,11 +37,6 @@ body {
 		}
 
 		.prateleira-tabs__tabs {
-			@include breakpoint ('small', 'max') {
-				margin: 0 auto 12px;
-				width: 310px;
-			}
-
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
@@ -140,11 +135,15 @@ body {
 	}
 
 	.vitrine-ofertas-interesses {
-		.prateleira-tabs__tabs {
+		.prateleira-tabs__tabs.fiveElements {
+			@include breakpoint ('small', 'max') {
+				justify-content: space-between;
+				margin: 0 0 32px;
+			}
 
 			.fifthItem,
 			.fourthItem {
-				@include breakpoint ('small', 'max') { width: 149px; }
+				@include breakpoint ('small', 'max') { width: 48%; }
 
 				.discount-item {
 					@include breakpoint ('small', 'max') {
@@ -158,7 +157,7 @@ body {
 			}
 
 			.minorButton {
-				@include breakpoint ('small', 'max') { width: 95px }
+				@include breakpoint ('small', 'max') { width: 30% }
 
 				.discount-item {
 					@include breakpoint ('small', 'max') {
@@ -175,20 +174,23 @@ body {
 				&.antecipada {
 					@include breakpoint ('small', 'max') {
 						margin-left: 0;
-						margin-right: 6px;
+						margin-right: 0;
 					}
 				}
 
 				&.frete,
 				&.quarenta {
 					@include breakpoint ('small', 'max') {
-						margin-left: 6px;
+						margin-left: 0;
 						margin-right: 0;
 					}
 				}
 
 				&.vinte {
-					@include breakpoint ('small', 'max') { margin-left: 6px; }
+					@include breakpoint ('small', 'max') {
+						margin-left: 0;
+						margin-right: 0;
+					}
 				}
 			}
 		}
